<resources>
    <string name="app_name">Rate that Record</string>
    <string name="txtSplash">Rate that Record</string>
    <string name="musicNote1">Single Music Note image</string>
    <string name="musicNotesMulti">Multicolor Music Notes image</string>
    <string name="musicNotes">White and Black Music Notes image</string>
    <string name="danceClub">Dance Club image</string>
    <string name="btnMoenia">Play Moenia Song</string>
    <string name="btnMiranda">Play Miranda Song</string>
    <string name="btnEnrique">Play Enrique Song</string>

</resources>
